--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "chartjs-chart-financial": "^0.2.1",
     "chartjs-plugin-zoom": "^2.1.0",
     "next": "15.0.3",
+    "python-shell": "^5.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "tailwind-scrollbar": "^3.1.0"
+    "tailwind-scrollbar": "^3.1.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "eslint": "^8",
